[gd_scene load_steps=8 format=3 uid="uid://887341wdcjj0"]

[ext_resource type="Script" uid="uid://jgjd0wadl4rk" path="res://Global/Entities/BaseUnit.gd" id="1_a7myu"]
[ext_resource type="Script" uid="uid://bnlfmm0v76j43" path="res://Global/Entities/SelectionBox.gd" id="2_6dss8"]
[ext_resource type="AnimationLibrary" uid="uid://b06lf5rbt3h4d" path="res://Global/Styles/Effects.res" id="2_wci0y"]
[ext_resource type="PackedScene" uid="uid://00ly27nb6r0b" path="res://Global/Menus/CircularMenu.tscn" id="4_qxfkq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_765k1"]
size = Vector2(50, 50.5)

[sub_resource type="Animation" id="Animation_6luok"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBorder:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.768627, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomBorder:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.768627, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftBorder:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.768627, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RightBorder:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.768627, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o2ruw"]
_data = {
&"RESET": SubResource("Animation_6luok")
}

[node name="BaseUnit" type="CharacterBody2D"]
input_pickable = true
safe_margin = 0.1
script = ExtResource("1_a7myu")

[node name="CollisionShapeBaseUnit" type="CollisionShape2D" parent="."]
top_level = true
position = Vector2(25, 25)
shape = SubResource("RectangleShape2D_765k1")
debug_color = Color(0, 0.647627, 0.205698, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShapeArea" type="CollisionShape2D" parent="Area2D"]
top_level = true
position = Vector2(25, 25)
shape = SubResource("RectangleShape2D_765k1")
debug_color = Color(0, 0.647627, 0.205698, 0.42)

[node name="SelectionBox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 45.0
offset_bottom = 45.0
script = ExtResource("2_6dss8")
border_color = Color(1, 0.768627, 0, 1)

[node name="TopBorder" type="ColorRect" parent="SelectionBox"]
layout_mode = 0
offset_right = 45.0
offset_bottom = 45.0
color = Color(1, 0.768627, 0, 1)

[node name="BottomBorder" type="ColorRect" parent="SelectionBox"]
layout_mode = 0
offset_right = 45.0
offset_bottom = 45.0
color = Color(1, 0.768627, 0, 1)

[node name="LeftBorder" type="ColorRect" parent="SelectionBox"]
layout_mode = 0
offset_right = 45.0
offset_bottom = 45.0
color = Color(1, 0.768627, 0, 1)

[node name="RightBorder" type="ColorRect" parent="SelectionBox"]
layout_mode = 0
offset_right = 45.0
offset_bottom = 45.0
color = Color(1, 0.768627, 0, 1)

[node name="SelectionAnimationPlayer" type="AnimationPlayer" parent="SelectionBox"]
libraries = {
&"": SubResource("AnimationLibrary_o2ruw"),
&"Effects": ExtResource("2_wci0y")
}

[node name="CircularMenu" parent="." instance=ExtResource("4_qxfkq")]
visible = false
offset_left = 22.5
offset_top = 22.5
offset_right = 22.5
offset_bottom = 22.5

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
